# rawssg

./: .gitmodules  .prettierrc.json  Cargo.toml  Makefile  README.md  changelog  contributing  readme
.github/workflows/: rust.yml
src/: builder.rs  cli.rs  config.rs  error.rs  frontmatter.rs  main.rs  template.rs  watcher.rs
src/templates/: _content.html  _footer.html  _sidebar.html  base.html
src/templates/static/css/: styles.css
src/templates/static/js/: scripts.js
