[package]
name = "rawssg"
version = "0.1.0"
edition = "2024"
include = [
    "src/**/**/**/**",
    "Cargo.toml",
    "readme",
    "license"
]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
handlebars = "6.4.0"
html-escape = "0.2.13"
include_dir = "0.7.4"
notify = "8.2.0"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tera = "1.20.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

