[package]
name = "rawssg"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "A modular static site generator focused on simplicity, structured architecture, and clean UI/UX separation."
license = "AGPL-3.0"
readme = "readme"
repository = "https://github.com/neuxdotdev/rawssg"
homepage = "https://github.com/neuxdotdev/rawssg"
documentation = "https://docs.rs/rawssg"
keywords = ["ssg", "static-site-generator", "rust", "modular", "site-builder"]
categories = ["command-line-utilities", "web-programming"]
authors = ["neuxdotdev"]

include = [
    "src/**",
    "Cargo.toml",
    "readme",
    "license"
]

exclude = [
    ".github/**",
    "target/**",
    "lib/**"
]

[workspace]
members = [
    "lib/librawssg",
    "lib/rawssg-templates",
    "lib/uirawssg"
]

resolver = "2"

[dependencies]
librawssg = { path = "lib/librawssg", version = "0.1.0" }
rawssg-templates = { path = "lib/rawssg-templates", version = "0.1.0" }
uirawssg = { path = "lib/uirawssg", version = "0.1.0" }

[features]
default = []
ui = []
templates = []

[[bin]]
name = "rawssg-cli"
path = "src/main.rs"